// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`boolean > renders boolean parser 1`] = `
"import * as DP from "@duplojs/utils/dataParser";

export const booleanParserDataParser = DP.boolean({ coerce: true });"
`;

exports[`boolean > renders boolean parser without coerce 1`] = `
"import * as DP from "@duplojs/utils/dataParser";

export const booleanParserNoCoerceDataParser = DP.boolean();"
`;
